--- a/www-hakyll/drafts/2022-01-12-units-smt.rst
+++ b/www-hakyll/drafts/2022-01-12-units-smt.rst
@@ -376,9 +376,47 @@ when it is unifying normalized units.
         [("kg", [1]), ("m", [1]), ("s", [-, 2])]
         [("kg", [1]), ("m", [1]), ("s", [-, 2])]
 
+Tracing in IO
+-------------
+
+It is good to be able to see the conversation the ``thoralf-plugin`` has with
+the SMT solver. The code for `the Thoralf plugin paper`_ used ``tcPluginIO`` to
+write to stout with ``putStrLn``. I find that useful too as I can pick just what
+I want to trace uninterrupted by copious other tracing. I have a small package
+for doing this, `ghc-tcplugins-trace`_.
+
+.. code:: Haskell
+
+    data DebugCt 
+        DebugCt 
+            { traceCallCount :: TraceCallCount
+            -- ^ Trace TcPlugin call count.
+            , traceCts :: TraceCts
+            -- ^ Trace GHC constraints.
+            , traceCarry :: TraceCarry
+            -- ^ Trace GHC constraints carried through conversion and solving.
+            , traceSolution :: TraceSolution
+            -- ^ Trace the solution, the @TcPluginResult@.
+            }
+
+I'm using this with both plugins and have another for tracing SMT conversion and
+conversation.
+
+.. code:: Haskell
+
+    data DebugSmt =
+        DebugSmt
+            { traceConvertCtsToSmt :: TraceConvertCtsToSmt
+            -- ^ Trace conversions to SMT notation
+            , traceSmtConversation :: TraceSmtConversation
+            -- ^ Trace the conversation with the SMT solver
+            }
+
 .. [#] I've removed pragmas, most imports and type signatures from the program listing.
 .. [#]
     With a regex I grabbed the first word ``s/^(\S+).*$/$1/``, deleted lines with
     leading spaces with ``s/ .*\n/\n/`` and deleted multiple blank lines with
     ``s/\n\n+/\n/``.
 .. [#] Not shown are calls to the plugin want to solve constraints for ``?callStack``.
+.. _`the Thoralf plugin paper`: https://richarde.dev/papers/2018/thoralf/thoralf.pdf
+.. _ghc-tcplugins-trace: https://github.com/BlockScope/ghc-tcplugins-trace
